# Fair-Text

./: .env  README.md  app.py  list_gemini_models.py  prompt_templates.py  pyproject.toml  requirements.txt
